--- a/.github/workflows/ci_workflow.yml
+++ b/.github/workflows/ci_workflow.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest # 👈 This is the environment where your job will run ubuntu-22.04
+    runs-on: ubuntu-latest # 👈 This is environment where your job will run ubuntu-22.04
     environment: RCNNEnv   # 👈 This links the job to your environment with secrets
 
     steps:
