--- a/.github/workflows/ci_workflow.yml
+++ b/.github/workflows/ci_workflow.yml
@@ -10,7 +10,7 @@ jobs:
   build:
 
     runs-on: ubuntu-latest # 👈 This is environment where your job will run ubuntu-22.04
-    environment: RCNNEnv   # 👈 This links the job to your environment with secret
+    # environment: RCNNEnv   # 👈 This links the job to your environment with secret
 
     steps:
     - name: 📥 Checkout Repository
@@ -34,21 +34,30 @@ jobs:
     - name: ✅ Run Django Check
       run: |
         python manage.py test
+   
     - name: 🐳 Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
 
-    - name: 🔐 Log in to Docker Hub
-      uses: docker/login-action@v2
+    - name: 🛠️ Build and Push Docker Image
+      uses: dhruvsh1997/docker-build-push@v4
       with:
+        image: dhruvsh1997/rcnn_object_det:latest
+        registry: docker.io
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: 🛠️ Build and Push Docker Image
-      uses: docker/build-push-action@v5
-      with:
-        context: .
-        push: true
-        tags: dhruvsh1997/rcnn_object_det:latest
+    # - name: 🔐 Log in to Docker Hub
+    #   uses: docker/login-action@v2
+    #   with:
+    #     username: ${{ secrets.DOCKER_USERNAME }}
+    #     password: ${{ secrets.DOCKER_PASSWORD }}
+
+    # - name: 🛠️ Build and Push Docker Image
+    #   uses: docker/build-push-action@v5
+    #   with:
+    #     context: .
+    #     push: true
+    #     tags: dhruvsh1997/rcnn_object_det:latest
 
     - name: ✅ Done
       run: echo "Docker image successfully built and pushed to Docker Hub."
