--- a/.github/workflows/ci_workflow.yml
+++ b/.github/workflows/ci_workflow.yml
@@ -38,26 +38,26 @@ jobs:
     - name: 🐳 Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
 
-    - name: 🛠️ Build and Push Docker Image
-      uses: dhruvsh1997/build-push-action@v5
-      with:
-        image: dhruvsh1997/rcnn_object_det:latest
-        registry: docker.io
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-
-    # - name: 🔐 Log in to Docker Hub
-    #   uses: docker/login-action@v2
+    # - name: 🛠️ Build and Push Docker Image
+    #   uses: dhruvsh1997/build-push-action@v5
     #   with:
+    #     image: dhruvsh1997/rcnn_object_det:latest
+    #     registry: docker.io
     #     username: ${{ secrets.DOCKER_USERNAME }}
     #     password: ${{ secrets.DOCKER_PASSWORD }}
 
-    # - name: 🛠️ Build and Push Docker Image
-    #   uses: docker/build-push-action@v5
-    #   with:
-    #     context: .
-    #     push: true
-    #     tags: dhruvsh1997/rcnn_object_det:latest
+    - name: 🔐 Log in to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
+    - name: 🛠️ Build and Push Docker Image
+      uses: docker/build-push-action@v5
+      with:
+        context: .
+        push: true
+        tags: dhruvsh1997/rcnn_object_det:latest
 
     - name: ✅ Done
       run: echo "Docker image successfully built and pushed to Docker Hub."
