--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ gunicorn==21.2.0
 whitenoise==6.6.0
 python-dotenv==1.0.0
 scikit-learn==1.3.2
-matplotlib==3.10.3
+# matplotlib==3.10.3
 psycopg2-binary==2.9.9
 cloud-tpu-client
 
